--- a/css/style.css
+++ b/css/style.css
@@ -14,12 +14,11 @@
     --fs-contact: 16px;
     --fs-btn: 16px;
     --fs-text: 16px;
-    --fs-title-main: 56px;  /* h1 */
-    --fs-title-block: 36px; /* h2 */
-    --fs-title-item: 20px;  /* h3 */
+    --fs-title-main: 56px;  
+    --fs-title-block: 36px; 
+    --fs-title-item: 20px;  
 }
 
-/*  */
 .visually-hidden {
     position: absolute;
     width: 1px;
@@ -51,16 +50,17 @@
 .header {
     padding-top: 24px;
     padding-bottom: 24px;
-
     box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 
         0px 1px 1px rgba(46, 47, 66, 0.16), 
         0px 1px 6px rgba(46, 47, 66, 0.08);
 }
+
 .header-block {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
+
 .nav {
     display: flex;
     align-items: center;
@@ -90,7 +90,7 @@ link {
 .logo-web { 
     color: var(--color-iris);
     display: inline-block;
- }
+}
 
 /* Clear List */
 ul,
@@ -99,15 +99,15 @@ ol,
     list-style: none;
     padding-left: 0;
     margin: 0;
- }
+}
 
- h1,
- h2,
- h3,
- h4,
- h5,
- h6,
- p { margin: 0; }
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p { margin: 0; }
 
 
 .menu { margin-left: 77px; }
@@ -133,13 +133,13 @@ ol,
     position: relative;
     color: var(--color-iris);
 }
- .current::after {
+
+.current::after {
     content: "";
     
     position: absolute;
     bottom: 0;
     left: 0;
-
     display: block;
     width: 100%;
     height: 5px;
@@ -147,18 +147,19 @@ ol,
     border-radius: 2px;
     
     margin-bottom: -24px;
- }
+}
 
 .contact-item-link[href*="tel:"]{ text-transform: uppercase; }
 .menu-item-link {
     font-size: var(--fs-nav); /* 16 */
     font-weight: 600;
-
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .menu-item-link:hover { 
     color: var(--color-text); 
 }
+
 .menu-item-link:active,
 .menu-item-link:focus { 
     color: var(--color-iris); 
@@ -174,21 +175,25 @@ ol,
     font-weight: 600; 
     margin: 0;
 }
+
 .title-main {
     font-size: var(--fs-title-main);
     line-height: 1.07; /* 60 / 56 = 1.07 */
     margin-bottom: 48px;
 }
+
 .title-block {
     font-size: var(--fs-title-block);
     line-height: 1.1; /* 40 / 36 = 1.1 */
     margin-bottom: 72px;
 }
+
 .title-item {
     font-size: var(--fs-title-item);
     line-height: 1.2;  /* 24 / 20 = 1.2 */
     margin-bottom: 8px;
 }
+
 .title-modal {
     font-size: 16px;
     font-weight: 500;
@@ -204,6 +209,7 @@ ol,
     line-height: 1.5; /* 24 / 16 = 1.5 */    
     
 }
+
 .sm-text {
     font-size: 12px; /* 12px; */
     line-height: 1.33; /* 16 / 12 = 1.33 */    
@@ -225,17 +231,14 @@ ol,
     background-color: var(--color-iris);
     border: none;
     border-radius: 4px;
-
     font-family: inherit;
     font-size: var(--fs-btn);
     font-weight: 500;
-    line-height: 1.5; /* 24 / 16 = 1.5 */
+    line-height: 1.5; 
     letter-spacing: 0.04em;
-
     min-width: 20px;
     padding: 16px 32px;
     cursor: pointer;
-
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -248,9 +251,6 @@ ol,
     color: var(--color-white);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
-/* .btn:hover {
-    background-color: var(--color-iris);
-} */
 
 .btn-main { line-height: 1.2; } /* 19 /16 = 1.2 */
 
@@ -264,13 +264,11 @@ ol,
     padding-bottom: 192px;
 }
 
-/* Background image in Presentation */
 .bg-image {
     max-width: 1600px;
     min-height: 603px;
     margin-left: auto;
     margin-right: auto;
-    /* outline: 1px solid black; */
     background-color: var(--color-dark);
     background-image: linear-gradient(
         to right, 
@@ -289,7 +287,6 @@ ol,
     align-items: center;
     justify-content: center;
     cursor: pointer;
-
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
                 color 250ms cubic-bezier(0.4, 0, 0.2, 1),
                 fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -302,7 +299,6 @@ ol,
     right: 24px;
     width: 24px;
     height: 24px;
-
     border-radius: 50%;
     background-color: var(--color-accent);
     border: 1px solid rgba(0, 0, 0, 0.1);
@@ -356,14 +352,13 @@ ol,
 .product-card {
     position: relative;
 }
+
 .product-text {
     position: absolute;
     bottom: 0;
     left: 0;
     width: 100%;
-
     padding: 16px;
-
     background-color: var(--color-subtle-text);
     color: var(--color-text);
     opacity: 0.7;
@@ -378,9 +373,9 @@ ol,
         0px 2px 1px rgba(46, 47, 66, 0.08);
     border-radius: 0px 0px 4px 4px;
 }
+
 .team-title-block { padding: 32px 0; }
 
-/* Team Social net */
 .team-social-list {
     margin-top: 8px;
     display: flex;
@@ -388,6 +383,7 @@ ol,
     justify-content: center;
     padding: 0 4px;
 }
+
 .team-social-item:not(:last-child) {
     margin-right: 24px;
 }
@@ -398,8 +394,8 @@ ol,
     width: 40px;
     height: 40px;
     border: none;
-    /* transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
+
 .btn-team-social-icon {
     width: 16px;
     height: 16px;
@@ -425,9 +421,8 @@ ol,
     padding: 12px 24px; 
     color: var(--color-iris);
     background-color: var(--color-light);
-    /* transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-        background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
+
 .btn-filter:active,
 .btn-filter:focus,
 .btn-filter:hover {
@@ -448,21 +443,15 @@ ol,
 
 .gallery-item {
     flex-basis: calc((100% / 3) - 24px);
-    /* flex-basis: calc((100% - 24px * 2) / 3); */
-
     margin-left: 12px;
     margin-right: 12px;
     margin-bottom: 48px;
-
     border: 0.5px solid #F4F4FD;
 }
 
 .gallery-item:nth-child(3n){
     margin-right: 0;
 }
-/* .gallery-item:nth-last-child(-n + 3) {
-	margin-bottom: 0;
-} */
 
 .gallery-card {
     position: relative;
@@ -472,7 +461,6 @@ ol,
 .gallery-item-overlay {
     display: inline-block;
     content: "";
-
     position: absolute;
     bottom: 0;
     left: 0;
@@ -480,7 +468,6 @@ ol,
     height: 100%;
     background-color: var(--color-iris);
     padding: 40px 32px;
-    
     opacity: 0;
     transform: translateY(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
@@ -496,7 +483,6 @@ ol,
     text-decoration: none;
     display: inline-block;
     outline: none;
-
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -519,6 +505,7 @@ ol,
     color: var(--color-text);
     padding: 32px 16px; 
 }
+
 .gallery-item-text { color: var(--color-white); }
 
 
@@ -544,10 +531,8 @@ ol,
     height: 88px;
     fill: var(--color-subtle-text);
     padding: 16px 32px;
-        
     border-radius: 4px;
     outline: 1px solid var(--color-subtle-text);
-    
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
         outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -566,7 +551,6 @@ ol,
     left: 0;
     width: 100%;
     height: 100%;
-
     background-color: rgba(46, 47, 66, 0.4);
     opacity: 1;
     z-index: 100;
@@ -589,19 +573,15 @@ ol,
     position: absolute;
     top: 50%;
     left: 50%;
-
     min-width: 408px;
     min-height: 604px;
     padding: 72px 24px 24px 24px;
-
     background-color: #FCFCFC;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14),
         0px 1px 3px rgba(0, 0, 0, 0.12),
         0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
-
     transform: translate(-50%, -50%) scale(1);
-
     opacity: 1;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
                 opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -619,14 +599,12 @@ ol,
 
 .text-field {
     display: block;
-
     width: 100%;
     height: 40px;
     outline: 1px solid rgba(33, 33, 33, 0.2);
     background-color: transparent;
     border-radius: 4px;
     border: none;
-
     padding: 8px 16px 8px 38px;
 }
 
@@ -639,6 +617,7 @@ ol,
 
     transform: translateY(25%);
 }
+
 .icon-modal {
     width: 22px;
     height: 24px;
@@ -647,7 +626,6 @@ ol,
 
 .name-field {
     display: block;
-    /* margin-bottom: 4px; */
     color: var(--color-subtle-text);
 }
 
@@ -669,7 +647,6 @@ ol,
     resize: none;
 }
 
-/* user checkbox */
 .text-checkbox {
     display: inline-block;
     padding-left: 18px;
@@ -687,12 +664,9 @@ ol,
         
     width: 16px;
     height: 16px;
-
     transform: translateY(20%);
-
     border: 2px solid black;
     border-radius: 4px;
-
     background-color: transparent;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
                 border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -720,6 +694,7 @@ ol,
     display: block;
     margin: 0 auto;
 }
+
 .btn-send-modal:hover,
 .btn-send-modal:focus {
     background-color: var(--color-btn-active);
@@ -730,6 +705,7 @@ ol,
     padding-top: 100px;
     padding-bottom: 100px;
 }
+
 .footer-card { 
     width: 264px; 
     margin-right: 40px;
@@ -768,7 +744,6 @@ ol,
     transform: translateY(80%);
     color: var(--color-subtle-text);
     background-color: var(--color-dark);
-
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
                 background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
                 border 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -779,6 +754,7 @@ ol,
     transform: translateY(-70%);
     
 }
+
 .footer-field:hover,
 .footer-field:focus {
     border: 1px solid var(--color-iris);
@@ -805,9 +781,8 @@ ol,
     height: 40px;
     border-radius: 50%;
     background-color: rgba(255, 255, 255, 0.1);
-
-    /* transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
+
 .link-footer-social-icon { 
     width: 24px;
     height: 24px;
