--- a/css/style.css
+++ b/css/style.css
@@ -526,6 +526,7 @@ p { margin: 0; }
     justify-content: center;
     background-color: var(--color-white);
 }
+
 .customer-icon {
     width: 168px;
     height: 88px;
@@ -536,13 +537,26 @@ p { margin: 0; }
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
         outline 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.customer-link:focus .customer-icon,
-.customer-link:active .customer-icon,
-.customer-link:hover .customer-icon {
-    fill: var(--color-iris);
-    outline: 1px solid var(--color-iris);
+.customers-list{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    row-gap: 72px;
+    column-gap: 24px;
 }
+
+.customer-item{
+    width: calc((100% - 24px) / 2);
+    height: 88px;
+}
+
+.customer-card{
+    width: 100%;
+    height: 100%;
+}
+
+
+
 
 /* =========== BackDrop & Modal =========== */
 .backdrop {
