--- a/css/mobile-style.css
+++ b/css/mobile-style.css
@@ -723,11 +723,11 @@
     flex-wrap: wrap;
     justify-content: center;
     row-gap: 72px;
-    column-gap: 24px;
+    column-gap: 16px;
 }
 
 .customer-item {
-    width: calc((100% - 24px) / 2);
+    width: calc((100% - 16px) / 2);
     height: 88px;
 }
 
@@ -1079,6 +1079,9 @@
 
     .customers > .container {
         width: 582px;
+    }
+    .customer-list{
+        column-gap: 24px;
     }
     .customer-item {
         width: calc((100% - 2 * 24px) / 3);
