--- a/css/mobile-style.css
+++ b/css/mobile-style.css
@@ -1080,8 +1080,9 @@
     .customers > .container {
         width: 582px;
     }
-    .customer-list{
+    .customers-list{
         column-gap: 24px;
+        justify-content: space-between;
     }
     .customer-item {
         width: calc((100% - 2 * 24px) / 3);
